--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>VuePress</title>
+    <title>博客</title>
     <meta name="description" content="">
     
     
-    <link rel="preload" href="/assets/css/0.styles.0ccd05a4.css" as="style"><link rel="preload" href="/assets/js/app.c1dff81f.js" as="script"><link rel="preload" href="/assets/js/2.45c9f2be.js" as="script"><link rel="preload" href="/assets/js/5.f03da85c.js" as="script"><link rel="prefetch" href="/assets/js/3.d91d1af1.js"><link rel="prefetch" href="/assets/js/4.6ebd8f75.js"><link rel="prefetch" href="/assets/js/6.28b146e0.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.0ccd05a4.css">
+    <link rel="preload" href="/daily/assets/css/0.styles.c6353a46.css" as="style"><link rel="preload" href="/daily/assets/js/app.426cb640.js" as="script"><link rel="preload" href="/daily/assets/js/2.45c9f2be.js" as="script"><link rel="preload" href="/daily/assets/js/5.f03da85c.js" as="script"><link rel="prefetch" href="/daily/assets/js/3.d91d1af1.js"><link rel="prefetch" href="/daily/assets/js/4.6ebd8f75.js"><link rel="prefetch" href="/daily/assets/js/6.28b146e0.js">
+    <link rel="stylesheet" href="/daily/assets/css/0.styles.c6353a46.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container no-sidebar"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/" class="home-link router-link-exact-active router-link-active"></a> <div class="links"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value=""> <!----></div> <!----></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><!---->  <!----> </aside> <main class="page"> <div class="theme-default-content content__default"><p>one</p></div> <footer class="page-edit"><!----> <!----></footer> <!----> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.c1dff81f.js" defer></script><script src="/assets/js/2.45c9f2be.js" defer></script><script src="/assets/js/5.f03da85c.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container no-sidebar"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/daily/" class="home-link router-link-exact-active router-link-active"><!----> <span class="site-name">博客</span></a> <div class="links"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value=""> <!----></div> <!----></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><!---->  <!----> </aside> <main class="page"> <div class="theme-default-content content__default"><p>one</p></div> <footer class="page-edit"><!----> <!----></footer> <!----> </main></div><div class="global-ui"></div></div>
+    <script src="/daily/assets/js/app.426cb640.js" defer></script><script src="/daily/assets/js/2.45c9f2be.js" defer></script><script src="/daily/assets/js/5.f03da85c.js" defer></script>
   </body>
 </html>
