--- a/404.html
+++ b/404.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>VuePress</title>
+    <title>博客</title>
     <meta name="description" content="">
     
     
-    <link rel="preload" href="/assets/css/0.styles.0ccd05a4.css" as="style"><link rel="preload" href="/assets/js/app.c1dff81f.js" as="script"><link rel="preload" href="/assets/js/4.6ebd8f75.js" as="script"><link rel="prefetch" href="/assets/js/2.45c9f2be.js"><link rel="prefetch" href="/assets/js/3.d91d1af1.js"><link rel="prefetch" href="/assets/js/5.f03da85c.js"><link rel="prefetch" href="/assets/js/6.28b146e0.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.0ccd05a4.css">
+    <link rel="preload" href="/daily/assets/css/0.styles.c6353a46.css" as="style"><link rel="preload" href="/daily/assets/js/app.426cb640.js" as="script"><link rel="preload" href="/daily/assets/js/4.6ebd8f75.js" as="script"><link rel="prefetch" href="/daily/assets/js/2.45c9f2be.js"><link rel="prefetch" href="/daily/assets/js/3.d91d1af1.js"><link rel="prefetch" href="/daily/assets/js/5.f03da85c.js"><link rel="prefetch" href="/daily/assets/js/6.28b146e0.js">
+    <link rel="stylesheet" href="/daily/assets/css/0.styles.c6353a46.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.c1dff81f.js" defer></script><script src="/assets/js/4.6ebd8f75.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/daily/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/daily/assets/js/app.426cb640.js" defer></script><script src="/daily/assets/js/4.6ebd8f75.js" defer></script>
   </body>
 </html>
